# dicom-gen-dictionary

./: .gitignore  Haskeleton.hs  LICENSE.md  Makefile  README.md  dicom-gen-dictionary.cabal  dicom.dic  stack.yaml
benchmark/: Bench.hs
executable/: Main.hs
