author:
    Dan Plubell
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    -- TODO
    Other
copyright:
    2015 Dan Plubell <danplubell@gmail.com>
description:
    Contains utilities for generating a DICOM dictionary from the DICOM standard DocBook files
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    dplubell@cerner.com
name:
    dicom-gen-dictionary
synopsis:
    Contains utilities for generating a DICOM dictionary from the DICOM stand DocBook files
tested-with:
    GHC == 7.8
version:
    0.0.0
library
    build-depends:
        base ==4.*
        , dicom-dictionary == 0.0.0
        , HaXml == 1.25.*
        , parsec == 3.1.*
    default-language:
        Haskell2010
    exposed-modules:
        DICOM.Gen.Dictionary
        -- HASKELETON: New.Module
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library
executable dicom-gen-dictionary
    build-depends:
        base
      , dicom-gen-dictionary
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

